octo-cluster/cluster/core/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: "longhorn.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${SECRET_DOMAIN}
      secretName: longhorn-tls
